# pybmodes

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  VALIDATION.md  make_logo.py  pyproject.toml
.github/workflows/: ci.yml
cases/: ECOSYSTEM_FINDING.md  iea15_deep_diagnostic.md  iea15_frequency_diagnostic.md  iea15_umainesemi_walkthrough.ipynb  iea15_volturnus_windio_walkthrough.ipynb
cases/bir_2010_floating/: run.py
cases/bir_2010_land_tower/: run.py
cases/bir_2010_monopile/: run.py
cases/iea3mw_land/: run.py
cases/iea3mw_land/outputs/: coefficients.txt  validation_report.md
cases/nrel5mw_land/: run.py
cases/nrel5mw_land/outputs/: coefficients.txt  validation_report.md
cases/nrel5mw_monopile/: run.py
cases/nrel5mw_monopile/outputs/: frequencies.txt
cases/sample_inputs/: README.md  verify.py
cases/sample_inputs/01_uniform_blade/: README.md  uniform_blade.bmi
cases/sample_inputs/02_tower_topmass/: README.md  tower_topmass.bmi
cases/sample_inputs/03_rotating_uniform_blade/: README.md  rotating_blade.bmi
cases/sample_inputs/04_pinned_free_cable/: README.md  cable.bmi
cases/sample_inputs/industry_turbines/: README.md  build.py
cases/sample_inputs/industry_turbines/01_nrel5mw_land/: README.md
cases/sample_inputs/industry_turbines/02_nrel5mw_oc3monopile/: README.md
cases/sample_inputs/industry_turbines/03_iea34_land/: README.md
cases/sample_inputs/industry_turbines/04_iea10_monopile/: 04_iea10_monopile.bmi  README.md
cases/sample_inputs/industry_turbines/05_iea15_monopile/: 05_iea15_monopile.bmi  README.md
cases/sample_inputs/industry_turbines/06_iea22_monopile/: README.md
cases/sample_inputs/reference_turbines/: README.md  build.py
cases/sample_inputs/reference_turbines/01_nrel5mw_land/: 01_nrel5mw_land.bmi  01_nrel5mw_land_tower.bmi  README.md
cases/sample_inputs/reference_turbines/02_nrel5mw_oc3monopile/: 02_nrel5mw_oc3monopile.bmi  02_nrel5mw_oc3monopile_tower.bmi  README.md
cases/sample_inputs/reference_turbines/03_iea34_land/: 03_iea34_land.bmi  03_iea34_land_blade.bmi  03_iea34_land_tower.bmi  README.md
cases/sample_inputs/reference_turbines/04_iea10_monopile/: 04_iea10_monopile_blade.bmi  04_iea10_monopile_tower.bmi  README.md
cases/sample_inputs/reference_turbines/05_iea15_monopile/: 05_iea15_monopile_blade.bmi  05_iea15_monopile_tower.bmi  README.md
cases/sample_inputs/reference_turbines/06_iea22_monopile/: 06_iea22_monopile.bmi  06_iea22_monopile_tower.bmi  README.md
cases/sample_inputs/reference_turbines/07_nrel5mw_oc3hywind_spar/: 07_nrel5mw_oc3hywind_spar_blade.bmi  07_nrel5mw_oc3hywind_spar_tower.bmi  README.md
docs/: RELEASE_CHECKLIST.md
examples/: 01_blade_analysis.py  02_tower_analysis.py  03_patch_elastodyn.py  04_plot_results.py
notebooks/: iea15_umainesemi_walkthrough.ipynb  walkthrough.ipynb
pybmodes/fem/: assembly.py  gauss.py  nondim.py  solver.py
reference_decks/: FLOATING_CASES.md  README.md  VALIDATION_SUMMARY.md
reference_decks/iea15mw_umainesemi/: before_patch.txt  validation_report.txt
reference_decks/iea34_land/: before_patch.txt
reference_decks/nrel5mw_land/: before_patch.txt  validation_report.txt
reference_decks/nrel5mw_oc3monopile/: before_patch.txt  validation_report.txt
reference_decks/nrel5mw_oc4semi/: before_patch.txt  validation_report.txt
scripts/: audit_validation_claims.py  benchmark_sparse_solver.py  build_reference_decks.py  campbell.py  visualise_polynomial_comparison.py  visualise_polynomial_comparison_5mw_monopile.py  visualise_polynomial_comparison_5mw_oc3spar.py  visualise_polynomial_comparison_iea10_monopile.py  visualise_polynomial_comparison_iea15_monopile.py  visualise_polynomial_comparison_iea22.py  visualise_polynomial_comparison_iea34.py
src/: README.md
src/pybmodes/: __init__.py  campbell.py  checks.py  cli.py  coords.py  mac.py  mooring.py  report.py
src/pybmodes/_examples/: __init__.py
src/pybmodes/_examples/reference_decks/: README.md  VALIDATION_SUMMARY.md
src/pybmodes/_examples/sample_inputs/: README.md  verify.py
src/pybmodes/elastodyn/: __init__.py  params.py  validate.py  writer.py
src/pybmodes/fem/: assembly.py  boundary.py  element.py  nondim.py  normalize.py  platform_modes.py  solver.py
src/pybmodes/fitting/: __init__.py  poly_fit.py
src/pybmodes/io/: __init__.py  _serialize.py  bmi.py  elastodyn_reader.py  geometry.py  out_parser.py  sec_props.py  subdyn_reader.py  wamit_reader.py  windio.py  windio_blade.py  windio_floating.py
src/pybmodes/io/_elastodyn/: __init__.py  adapter.py  lex.py  parser.py  types.py  writer.py
src/pybmodes/models/: __init__.py  _pipeline.py  blade.py  result.py  tower.py
src/pybmodes/plots/: __init__.py  environmental.py  mode_shapes.py  style.py
tests/: _beamdyn_blade.py  _synthetic_bmi.py  conftest.py  test_asymmetric_platform.py  test_batch.py  test_campbell.py  test_campbell_helpers.py  test_cases_compile_clean.py  test_certtest.py  test_checks.py  test_classifier.py  test_cli_patch_args.py  test_coords.py  test_elastodyn.py  test_elastodyn_compatible.py  test_elastodyn_extra.py  test_elastodyn_reader.py  test_elastodyn_writer.py  test_environmental.py  test_examples_cli.py  test_fem.py  test_fitting.py  test_fitting_extra.py  test_floating_samples.py  test_floating_samples_spectra.py  test_geometry_windio.py  test_io.py  test_io_internals.py  test_mac.py  test_models.py  test_models_extra.py  test_mooring.py  test_notebooks.py  test_out_parser.py  test_parser_negative_paths.py  test_platform_mode_labels.py  test_post_1_0_review_fixes.py  test_reference_decks.py  test_report.py  test_serialize.py  (+9 more)
tests/data/certtest/: Test01_nonunif_blade.bmi  Test02_blade_with_tip_mass.bmi  Test03_tower.bmi  Test04_wires_supported_tower.bmi
tests/data/offshore/: CS_Monopile.bmi  CS_Monopile.out  OC3Hywind.bmi  OC3Hywind.out
tests/fem/: test_boundary.py  test_cantilever.py  test_nondim.py  test_normalize.py  test_rotating_blade_with_tip_mass.py  test_rotating_cable.py  test_rotating_uniform_blade.py  test_solver.py  test_sparse_solver.py  test_uniform_tower_analytical.py
(+51 files in other folders)
