[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybmodes"
version = "0.1.0"
description = "Python finite-element library for wind turbine blade and tower modal analysis (OpenFAST/ElastoDyn)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jae Hoon Seo", email = "jaehoon.seo@inha.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/SMI-Lab-Inha/pybmodes"
Repository = "https://github.com/SMI-Lab-Inha/pybmodes"
Issues = "https://github.com/SMI-Lab-Inha/pybmodes/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: full FE solve against CertTest reference outputs",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
