[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybmodes"
version = "1.4.7"
description = "Python finite-element library for wind turbine blade and tower modal analysis (OpenFAST/ElastoDyn)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jae Hoon Seo", email = "jaehoon.seo@inha.ac.kr" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/SMI-Lab-Inha/pybmodes"
Repository = "https://github.com/SMI-Lab-Inha/pybmodes"
Issues = "https://github.com/SMI-Lab-Inha/pybmodes/issues"
Changelog = "https://github.com/SMI-Lab-Inha/pybmodes/blob/master/CHANGELOG.md"

[project.scripts]
pybmodes = "pybmodes.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "numpy",
    "scipy",
    # Tests/test_windio.py exercises the WindIO reader; bundle the
    # [windio] dep here so the suite runs under `pip install -e .[dev]`.
    "pyyaml>=6",
]
plots = [
    "matplotlib>=3.7",
]
windio = [
    # WindIO ontology .yaml input (Tower.from_windio). Opt-in: the
    # pyBmodes runtime core stays numpy+scipy only — same stance as
    # [plots]/[notebook].
    "pyyaml>=6",
]
notebook = [
    # Used by ``tests/test_notebooks.py`` to execute the bundled
    # walkthroughs headlessly. ``ipykernel`` provides the Python
    # kernel ``nbclient`` shells out to; ``nbformat`` is the
    # in-memory notebook reader. None of these are imported by the
    # ``pybmodes`` package itself — they're test-only deps.
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ipykernel>=6.20",
    # The notebooks themselves ``import matplotlib.pyplot`` and
    # ``from pybmodes.plots import …`` in their setup cells, so a
    # contributor who runs ``pip install -e ".[dev,notebook]"`` and
    # then ``pytest`` would otherwise see a ModuleNotFoundError
    # from inside nbclient rather than the documented clean SKIP.
    # Bundle matplotlib here so the ``[notebook]`` extra is
    # self-sufficient for the notebook tests. ``[plots]`` and
    # ``[notebook]`` overlap on matplotlib by design; that's
    # cheaper than asking contributors to remember to pair them.
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# ``py.typed`` advertises inline type info (PEP 561).
# ``_examples/**/*`` vendors the example bundle (cases/sample_inputs/
# and reference_decks/, both now living under
# ``src/pybmodes/_examples/``) into the wheel so
# ``pybmodes examples --copy <dir>`` works for users who installed
# from a wheel rather than a source checkout. Everything inside
# ``_examples/`` is data — the .py helpers (``verify.py``,
# ``reference_turbines/build.py``) are intended to be run after
# vendoring out, not imported.
pybmodes = ["py.typed", "_examples/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run skips integration tests so a fresh clone gets a green
# pytest with no external data. Run integration tests explicitly with
# ``pytest -m integration`` (requires local OpenFAST / BModes decks).
# Coverage reporting is on by default (informational); no
# ``--cov-fail-under`` floor at this stage because many ``models/``
# and ``io/`` paths only run under the ``integration`` marker, so the
# default-run number undersells real coverage. CI can add a soft
# threshold to its integration-inclusive job once we settle on a
# stable target. Full-suite coverage (``pytest -m ''``) currently
# sits around 80 %.
addopts = """\
    -v \
    -m 'not integration' \
    --cov=pybmodes \
    --cov-report=term-missing:skip-covered\
"""
markers = [
    "integration: requires external OpenFAST / BModes reference decks under docs/",
    "slow: longer numerical validation cases (>1 s wall time per test)",
]

[tool.coverage.run]
branch = true
source = ["pybmodes"]
omit = [
    "src/pybmodes/cli.py",            # exercised through CLI smoke tests
    # Render-only matplotlib helpers (optional [plots] extra) stay
    # omitted; the public, closed-form-tested environmental module
    # (kaimal/jonswap + the placement diagram) counts toward coverage.
    "src/pybmodes/plots/mode_shapes.py",
    "src/pybmodes/plots/style.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

# Per-module strict overrides. Modules listed here run under
# stricter mypy checks: untyped function definitions, untyped
# decorators, missing return-type annotations, and any-typed
# expressions are errors. Used to ratchet typing rigor on the
# stable core (fitting / solver / result dataclass / pipeline
# orchestration) without forcing the same bar on input-driven
# parsers where ``Any`` from regex-match groups is unavoidable.
# Add modules to this list as their typing is cleaned up; never
# remove modules without justification.
[[tool.mypy.overrides]]
module = [
    "pybmodes.fitting.poly_fit",
    "pybmodes.fem.solver",
    "pybmodes.models.result",
    "pybmodes.models._pipeline",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
